Fix a few more weird scrolling overflows

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -145,7 +145,7 @@ textarea:not(.plain) {
   font-size: var(--fonts-sm);
   outline: none;
   overflow-wrap: normal;
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: pre;
 }
 
